# dummy-python-library-with-poetry

./: pyproject.toml
foo/: foo.py
