[tool.poetry]
name = "dummy-python-library-with-poetry"
version = "0.1.0"
description = ""
authors = ["Some Guy"]
packages = [
    { include = "foo", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
